--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -12,6 +12,17 @@
 	<form th:action="@{/form}" th:object="${usuario}" method="post">
 
 		<div>
+			<label for="pais">País</label>
+			<div>
+				<select id="id" th:field="*{pais}">
+					<option value=""> SELECCIONAR </option>
+					<option th:each="pais : ${paises}" th:text="${pais}" th:value="${pais}"></option>
+				</select>
+			</div>
+			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
+		</div>
+
+		<div>
 			<label for="id">Id</label>
 			<div>
 				<input type="text" id="id" th:field="*{id}">
