--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -1,98 +1,170 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymleaf.org">
 <head>
-<meta charset="UTF-8" />
-<title th:text="${titulo}"></title>
+	<meta charset="UTF-8" />
+	<title th:text="${titulo}"></title>
+	<!-- 
+	<link rel="stylesheet"
+		href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+		crossorigin="anonymous">
+	 -->
+	 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 
 	<h3 th:text="${titulo}"></h3>
-	
-	<!-- <form th:action="@{/form}" method="post"> -->
-	<form th:action="@{/form}" th:object="${usuario}" method="post">
 
-		<div>
-			<label for="pais">País</label>
-			<div>
-				<select id="id" th:field="*{pais}">
-					<option value=""> SELECCIONAR </option>
-					<option th:each="pais : ${paises}" th:text="${pais}" th:value="${pais}"></option>
-				</select>
-			</div>
-			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
-		</div>
+	<div class="container">
+		<!-- <form th:action="@{/form}" method="post"> -->
+		<form th:action="@{/form}" th:object="${usuario}" method="post">
 
-		<div>
-			<label for="id">Id</label>
-			<div>
-				<input type="text" id="id" th:field="*{id}">
+			<div class="form-group row">
+				<label for="habilitar" class="col-form-label col-sm-2">Habilitar</label>
+				<div class="row col-sm-4">
+					<input type="checkbox" id="habilitar" th:field="*{habilitar}"
+						class="form-control col-sm-1">
+				</div>
 			</div>
-			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></div>
-		</div>
-				
-		<div>
-			<label for="nombre">Nombre</label>
-			<div>
-				<input type="text" id="nombre" th:field="*{nombre}">
-			</div>
-			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
-		</div>
 
-		<div>
-			<label for="apellido">Apellido</label>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Género</label>
+
+				<!-- 
 			<div>
-				<input type="text" id="apellido" th:field="*{apellido}">
+				<input type="radio" id="genero1" th:field="*{genero}" value="Hombre">
+				<label for="genero1"> Hombre </label>
 			</div>
-			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
-		</div>
-					
-		<div>
-			<label for="username">Username</label>
 			<div>
-				<!-- <input type="text" name="username" id="username" th:value="${usuario.username}"> -->
-				<input type="text" id="username" th:field="*{username}">
+				<input type="radio" id="genero2" th:field="*{genero}" value="Mujer">
+				<label for="genero2"> Mujer </label>				
 			</div>
-			<!-- <div th:if="${error != null && error.containsKey('username')}" th:text="${error.username}"></div> -->
-			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-		</div>
-		<div>
-			<label for="password">Pasword</label>
-			<div>
-				<!-- <input type="password" name="password" id="password"> -->
-				<input type="password" th:field="*{password}" id="password">
+			 -->
+				<div th:each="genero : ${generos}" class="row col-sm-2">
+					<input type="radio" th:field="*{genero}" th:value="${genero}" class="form-control col-sm-2"> 
+					<label th:for="${#ids.prev('genero')}" th:text="${genero}" class="col-form-label col-sm-2"></label>
+				</div>
+
+				<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}" class="alert alert-danger"></div>
 			</div>
-			<!-- <div th:if="${error != null && error.containsKey('password')}" th:text="${error.password}"></div> -->
-			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>			
-		</div>		
-		<div>
-			<label for="email">Email</label>
-			<div>
-				<!-- <input type="text" name="email" id="email"  th:value="${usuario.email}"> -->
-				<input type="text" id="email" th:field="*{email}" >				
+
+			<div class="form-group row">
+				<label for="pais" class="col-form-label col-sm-2">País</label>
+				<div class="col-sm-4">
+					<select id="id" th:field="*{pais}" class="form-control">
+						<option value="0">SELECCIONAR</option>
+						<!-- <option th:each="pais : ${paisesMap.entrySet()}" th:text="${pais.value}" th:value="${pais.key}"></option> -->
+						<option th:each="pais : ${listaPaises}" th:text="${pais.nombre}"
+							th:value="${pais.id}"></option>
+					</select>
+				</div>
+				<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}" class="alert alert-danger"></div>
 			</div>
-			<!-- <div th:if="${error != null && error.containsKey('email')}" th:text="${error.email}"></div> -->
-			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div> 			
-		</div>
-		<div>
-			<label for="cuenta">Cuenta</label>
-			<div>
-				<input type="number" id="cuenta" th:field="*{cuenta}" >				
+
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Roles</label>
+				<!-- <div th:each= "role : ${listaRolesString}">  
+				<input type="checkbox" th:field="*{roles}" th:value="${role}">
+				<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
+
+			<div th:each= "role : ${listaRolesMap.entrySet()}">
+				<input type="checkbox" th:field="*{roles}" th:value="${role.key}">
+				<label th:for="${#ids.prev('roles')}" th:text="${role.value}"></label>
 			</div>
-			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div> 			
-		</div>	
-		<div>
-			<label for="fechaNacimiento">Fecha Nacimiento</label>
-			<div>
-				<input type="date" id=fechaNacimiento th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd">				
+			-->
+				<div th:each="role : ${listaRoles}" class="row col-sm-2">
+					<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
+						th:checked="${#lists.contains(usuario.roles, role)}"
+						class="form-control col-sm-2"> 
+					<label th:for="${#ids.prev('roles')}" th:text="${role.getNombre()}" class="col-form-label col-sm-2"></label>
+				</div>
+				<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div> 			
-		</div>
-		<div>
-			<div>
-				<input type="submit" value="Enviar">
+
+			<div class="form-group row">
+				<label for="id" class="col-form-label col-sm-2">Id</label>
+				<div class="col-sm-4">
+					<input type="text" id="id" th:field="*{id}" class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="alert alert-danger"></div>
 			</div>
-		</div>
-	</form>
+
+			<div class="form-group row">
+				<label for="nombre" class="col-form-label col-sm-2">Nombre</label>
+				<div class="col-sm-4">
+					<input type="text" id="nombre" th:field="*{nombre}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger"></div>
+			</div>
+
+			<div class="form-group row">
+				<label for="apellido" class="col-form-label col-sm-2">Apellido</label>
+				<div class="col-sm-4">
+					<input type="text" id="apellido" th:field="*{apellido}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('apellido')}"
+					th:errors="*{apellido}" class="alert alert-danger"></div>
+			</div>
+
+			<div class="form-group row">
+				<label for="username" class="col-form-label col-sm-2">Username</label>
+				<div class="col-sm-4">
+					<!-- <input type="text" name="username" id="username" th:value="${usuario.username}"> -->
+					<input type="text" id="username" th:field="*{username}"
+						class="form-control">
+				</div>
+				<!-- <div th:if="${error != null && error.containsKey('username')}" th:text="${error.username}"></div> -->
+				<div th:if="${#fields.hasErrors('username')}"
+					th:errors="*{username}" class="alert alert-danger"></div>
+			</div>
+			<div class="form-group row">
+				<label for="password" class="col-form-label col-sm-2">Pasword</label>
+				<div class="col-sm-4">
+					<!-- <input type="password" name="password" id="password"> -->
+					<input type="password" th:field="*{password}" id="password"
+						class="form-control">
+				</div>
+				<!-- <div th:if="${error != null && error.containsKey('password')}" th:text="${error.password}"></div> -->
+				<div th:if="${#fields.hasErrors('password')}"
+					th:errors="*{password}" class="alert alert-danger"></div>
+			</div>
+			<div class="form-group row">
+				<label for="email" class="col-form-label col-sm-2">Email</label>
+				<div class="col-sm-4">
+					<!-- <input type="text" name="email" id="email"  th:value="${usuario.email}"> -->
+					<input type="text" id="email" th:field="*{email}"
+						class="form-control">
+				</div>
+				<!-- <div th:if="${error != null && error.containsKey('email')}" th:text="${error.email}"></div> -->
+				<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger"></div>
+			</div>
+			<div class="form-group row">
+				<label for="cuenta" class="col-form-label col-sm-2">Cuenta</label>
+				<div class="col-sm-4">
+					<input type="number" id="cuenta" th:field="*{cuenta}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}" class="alert alert-danger"></div>
+			</div>
+			<div class="form-group row">
+				<label for="fechaNacimiento" class="col-form-label col-sm-2">Fecha Nacimiento</label>
+				<div class="col-sm-4">
+					<input type="date" id=fechaNacimiento th:field="*{fechaNacimiento}"
+						placeholder="yyyy-MM-dd" class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('fechaNacimiento')}"
+					th:errors="*{fechaNacimiento}" class="alert alert-danger"></div>
+			</div>
+			<div class="form-group row">
+				<div class="col-sm-4">
+					<input type="submit" value="Enviar" class="btn btn-primary ">
+				</div>
+			</div>
+			<input type="hidden" th:field="*{valorSecreto}">
+		</form>
+	</div>
 
 </body>
 </html>
