--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -3,21 +3,39 @@
 <head>
 <meta charset="UTF-8" />
 <title th:text="${titulo}"></title>
+<!-- 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+ -->
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
-
-	<h3 th:text="${titulo}"></h3>
 	
-	<ul>
-		<li th:text="${usuario.id}"></li>	
-		<li th:text="${usuario.nombre}"></li>
-		<li th:text="${usuario.apellido}"></li>
-		<li th:text="${usuario.username}"></li>
-		<li th:text="${usuario.password}"></li>
-		<li th:text="${usuario.email}"></li>
-		<li th:text="${usuario.cuenta}"></li>
-		<li th:text="${usuario.pais}"></li>
-	</ul>
+	<div class="container">
+		<a th:href="@{/form}" class="btn btn-success btn-lg my-3">VOLVER</a>
+		<ul class="list-group my-3">
+			<li class="list-group-item active" th:text="${titulo}"></li>
+			<li class="list-group-item" th:text="'Habilitado: ' + ${usuario.habilitar}"></li>
+			<li class="list-group-item" th:text="'Género: ' + ${usuario.genero}"></li>
+			<li class="list-group-item" th:text="'Valor Secreto: ' + ${usuario.valorSecreto}"></li>
+			<li class="list-group-item" th:text="${usuario.id}"></li>	
+			<li class="list-group-item" th:text="${usuario.nombre}"></li>
+			<li class="list-group-item" th:text="${usuario.apellido}"></li>
+			<li class="list-group-item" th:text="${usuario.username}"></li>
+			<li class="list-group-item" th:text="${usuario.password}"></li>
+			<li class="list-group-item" th:text="${usuario.email}"></li>
+			<li class="list-group-item" th:text="${usuario.cuenta}"></li>
+			<li class="list-group-item" th:te	xt="${usuario.pais.id}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.codigo}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.nombre}"></li>
+			<li class="list-group-item" th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></li>
+			<li class="list-group-item" th:text="${#calendars.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></li>
+		</ul>
+	
+		<ul class="list-group my-3">
+			<li class="list-group-item active" th:text="'Roles'"></li>
+			<li class="list-group-item" th:each = "role : ${usuario.roles}" th:text="${role.id} + ': ' +  ${role.nombre} + '--> ' + ${role.role}">
+		</ul>
+	</div>
 	
 </body>
 </html>
