Interceptores y fin de proyecto

--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 	
+	<section th:replace="componentes/tiempo :: interceptor"></section>
+			
 	<div class="container">
 		<a th:href="@{/form}" class="btn btn-success btn-lg my-3">VOLVER</a>
 		<ul class="list-group my-3">
