--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+	<section th:replace="componentes/tiempo :: interceptor"></section>
+
 	<h3 th:text="${titulo}"></h3>
 
 	<div class="container">
